--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     <div class="screenwrapper">
     <div class="navbar">
         <div class="navbar-container">
-            <div class="navbar-items">
+            <div class="navbar-items not-vis">
                 <!-- <img src="ewj_logo_animated.svg" alt="Ekshärads Water Jet AB"> -->
-                <object type="image/svg+xml" data="ewj_logo_animated.svg" class="navbar-svg" alt="Ekshärads Water Jet AB" href="#" aria-label="Ekshärads Water Jet AB"></object>
+                <!-- <object type="image/svg+xml" data="ewj_logo_animated.svg" class="navbar-svg" alt="Ekshärads Water Jet AB" href="#" aria-label="Ekshärads Water Jet AB"></object> -->
+                <object type="image/svg+xml" data="ewj_logo.svg" class="navbar-svg" alt="Ekshärads Water Jet AB" href="index.html" aria-label="Ekshärads Water Jet AB"></object>
+
             </div>
 
             <div class="navbar-items">
@@ -133,13 +135,20 @@
         </div>
     </div>
     <section class="landing rellax" data-rellax-speed="-5" data-rellax-xs-speed="0" data-rellax-mobile-speed="0" data-rellax-tablet-speed="0" data-rellax-bigger-speed="0" >
-        <div class="header-left">
+        <!-- <div class="header-left">
             <h1>Vi skär med
                 <h1 id="switch-landing">Vatten</h1>
             </h1>
         </div>
         <div class="header-right">
-            
+            <object type="image/svg+xml" data="ewj_logo_animated.svg" class="navbar-svg" alt="Ekshärads Water Jet AB" href="#" aria-label="Ekshärads Water Jet AB"></object>
+        </div> -->
+
+        <div class="header-center">
+            <div class="header-center-content">
+                <object type="image/svg+xml" data="ewj_logo_animated.svg" class="header-svg" alt="Ekshärads Water Jet AB" href="#" aria-label="Ekshärads Water Jet AB"></object>
+                <h1>Vi skär med <b id="switch-landing">vatten</b></h1>
+            </div>
         </div>
     </section>
 
