--- a/kontakt.html
+++ b/kontakt.html
@@ -138,7 +138,7 @@
         </div>
     </div>
     
-    <section class="company-heading foretaget-section"></section>
+    <section class="company-heading kontakt-section"></section>
 
 <div class="empty-wrapper">
     <section class="contact-section">
