--- a/laser.html
+++ b/laser.html
@@ -285,10 +285,22 @@
                 data-pswp-width="2500" 
                 data-pswp-height="1674" 
                 target="_blank">
-                <img src="img/gallery/laser/laser3_400.jpg" alt="Bockad och blästrad laserskuren detalj" loading="lazy"/>
+                <img src="img/gallery/laser/laser3_400.jpg" alt="Laserskuren detalj" loading="lazy"/>
                 <div class="pswp-caption-content">
                     <p><b>Laserskuren detalj i S355MC</b></p>
-                    <p>Bockad och blästrad med kiselkarbid</p>
+                    <p>Obehandlad</p>
+                </div>
+                </a>
+
+                <a href="javascript:void();"
+                data-pswp-src="img/gallery/laser/laser4_2500.jpg"
+                data-pswp-width="2500" 
+                data-pswp-height="1674" 
+                target="_blank">
+                <img src="img/gallery/laser/laser4_400.jpg" alt="Laserskuren detalj" loading="lazy"/>
+                <div class="pswp-caption-content">
+                    <p><b>Laserskuren detalj i Mässing</b></p>
+                    <p>Borstad</p>
                 </div>
                 </a>
 
