--- a/maskinpark.html
+++ b/maskinpark.html
@@ -142,7 +142,7 @@
     <div class="machine-wrapper">
         <div class="machine-intro" id="maskinpark">
             <h1>Maskinpark</h1>
-            <p>Ekshärads Water Jet erhåller en rad olika maskiner för att kunna göra era projekt till verklighet. <br> Från vattenskärmaskiner till rundvalsning, det mesta under ett tak.</p>
+            <p>Ekshärads Water Jet erhåller en rad olika maskiner för att kunna göra era projekt till verklighet. <br> Från vattenskärmaskiner till rundvalsning, mycket under ett tak.</p>
         </div>
         <div class="machine-side-wrapper">
             <div class="machine-dom">
@@ -191,13 +191,13 @@
                         <p><b>Tryck: </b>60,000 PSI</p>
                         <p><b>Skäryta: </b>Max 6000 x 3000 mm</p>
                         <p><b>Skärmunstycken: </b>2st</p>
-                        <p>Skär material upp till 200mm</p>
+                        <p>Skär material upp till 200mm.</p>
                     </div>
                 </div>
 
                 <div class="machine-img-container">
                     <div class="machine-img-container-backdrop"></div>
-                    <img class="bs-right" src="./img/gallery/laser/laser1_400.jpg" alt="" >
+                    <img class="bs-right" src="./img/gallery/machines/kimtech-xy-large_750.jpg" alt="" >
                 </div>
             </div>
             <hr>
@@ -206,7 +206,7 @@
             <div class="machine-content" id="kimtech-xy-medium">
                 <div class="machine-img-container">
                     <div class="machine-img-container-backdrop"></div>
-                    <img class="bs-left" src="./img/gallery/laser/laser1_400.jpg" alt="">
+                    <img class="bs-left" src="./img/gallery/machines/kimtech-xy-medium_750.jpg" alt="">
                 </div>
 
                 <div class="machine-txt-container">
@@ -217,7 +217,7 @@
                         <p><b>Tryck: </b>60,000 PSI</p>
                         <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
                         <p><b>Skärmunstycken: </b>1st</p>
-                        <p>Skär material upp till 200mm</p>
+                        <p>Skär material upp till 200mm.</p>
                     </div>
                 </div>
             </div>
@@ -232,13 +232,13 @@
                         <p><b>Tryck: </b>60,000 PSI</p>
                         <p><b>Skäryta: </b>Max 2000 x 1000 mm</p>
                         <p><b>Skärmunstycken: </b>1st</p>
-                        <p>Skär material upp till 200mm</p>
+                        <p>Skär material upp till 200mm.</p>
                     </div>
                 </div>
 
                 <div class="machine-img-container">
                     <div class="machine-img-container-backdrop"></div>
-                    <img class="bs-right" src="./img/gallery/laser/laser1_400.jpg" alt="">
+                    <img class="bs-right" src="./img/gallery/machines/kimtech-xy-small_750.jpg" alt="">
                 </div>
             </div>
             <hr>
@@ -272,7 +272,7 @@
                         <p><b>Effekt: </b>3 kW</p>
                         <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
                         <p>Skär olegerat / låglegerat stål upp till 20mm, rostfritt upp till 10mm.</p>
-                        <p>Vår fiberlaser är även utrustad med ett materialtorn för stora serier.</p>
+                        <p>Vår fiberlaser är även utrustad med ett materialmagasin för större serier.</p>
                     </div>
                 </div>
                 
@@ -297,7 +297,7 @@
                         <p><b>Effekt: </b>Max 260 A</p>
                         <p><b>Skäryta: </b>Max 6000 x 3000 mm</p>
                         <p><b>Plasma: </b>Skär olegerat / låglegerat stål upp till 45mm.</p>
-                        <p><b>Gas: </b>Skär olegerat stål upp till 150mm</p>
+                        <p><b>Gas: </b>Skär olegerat stål upp till 150mm.</p>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                         <h2>AMADA HFE 3i 2204</h2>
                         <p><b>Typ: </b>Kantpress</p>
                         <p><b>Kraft: </b>Max 220 TON</p>
-                        <p><b>Bocklängd: </b>Max 4000mm *</p>
+                        <p><b>Bocklängd: </b>Max 4000mm. *</p>
                         <p><sub>* = Gäller inte alla godstjocklekar och material.</sub></p>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
             <div class="machine-content" id="sahinler-4r-hs-30-260">
                 <div class="machine-img-container">
                     <div class="machine-img-container-backdrop"></div>
-                    <img class="bs-left" src="./img/gallery/laser/laser1_400.jpg" alt="">
+                    <img class="bs-left" src="./img/gallery/machines/sahinler-4r-hs-30-260_750.jpg" alt="">
                 </div>
 
                 <div class="machine-txt-container">
@@ -335,7 +335,8 @@
                         <p><b>Typ: </b>Rundvals</p>
                         <p><b>Motorkraft: </b>7.5 kW</p>
                         <p><b>Rullängd: </b>Max 3100mm</p>
-                        <p>Kan rulla olika stålsorter upp till 10mm.</p>
+                        <p>Kan rulla olika stålsorter upp till 10mm. *</p>
+                        <p><sub>* = Gäller inte alla material.</sub></p>
                     </div>
                 </div>
             </div>
