--- a/vatten.html
+++ b/vatten.html
@@ -319,7 +319,7 @@
                 <img src="img/gallery/water/water1_400.jpg" alt="Vattenskurna detaljer i aluminium." loading="lazy"/>
                 <div class="pswp-caption-content">
                     <p><b>Vattenskurna detaljer i 6082</b></p>
-                    <p>Oprocceserad</p>
+                    <p>Obehandlad</p>
                 </div>
                 </a>
         
@@ -331,7 +331,7 @@
                 <img src="img/gallery/water/water2_400.jpg" alt="Vattenskuren detalj i S355MC." loading="lazy"/>
                 <div class="pswp-caption-content">
                     <p><b>Vattenskuren detalj i S355MC</b></p>
-                    <p>Oprocceserad</p>
+                    <p>Obehandlad</p>
                 </div>
                 </a>
 
