--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -237,7 +237,7 @@
                 <img src="img/gallery/plasma/plasma1_400.jpg" alt="Plasmaskuren detalj i S355MC." loading="lazy"/>
                 <div class="pswp-caption-content">
                     <p><b>Plasmaskuren detalj i S355MC</b></p>
-                    <p>Oprocceserad</p>
+                    <p>Obehandlad</p>
                 </div>
                 </a>
 
