--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -161,7 +161,7 @@
                     <a href="#material-gas">Material</a>
                 </li>
                 <li>
-                    <a href="#kontakt">Kontakt</a>
+                    <a href="kontakt.html">Kontakt</a>
                 </li>
             </ul>
         </div>
