--- a/foretaget.html
+++ b/foretaget.html
@@ -147,14 +147,21 @@
             <div class="hS">EST. 2000</div>
             <h1>Våra verktyg är eld & vatten</h1>
         
-            <p><b>Ekshärads Water Jet är en ledande leverantör av legobaserade skärtjänster med laser, vatten, gas och plasma. Valet av lämplig metod beror på en kombination av seriestorlek, tid och vilket material som ska skäras. 
-                Vi hjälper dig med  bedömningen så att din produkt får rätt kvalitet till rätt pris.</b></p>
+            <p class="outlined-p">Ekshärads Water Jet är en ledande leverantör av legobaserade skärtjänster med laser, vatten, gas och plasma. Valet av lämplig metod beror på en kombination av seriestorlek, tid och vilket material som ska skäras. 
+                Vi hjälper dig med  bedömningen så att din produkt får rätt kvalitet till rätt pris.</p>
             <p>Tack vare ett välfyllt lager, med de flesta förekommande dimensionerna av plåt, kan vi hålla mycket snabba leveranstider. Vi på Ekshärads Water Jet är flexibla, vi vill ge våra kunder det de söker. Det spelar ingen roll hur komplicerad detaljen är - vi anpassar oss.</p>
             <p>Våra moderna, NC-styrda skärmaskiner klarar det mesta, komplexa figurer med snäva toleranser, runda, ovala, fyrkantiga hål i tunna och grova dimensioner, alltid med högt materialutnyttjande. Beroende på hur dina underlag ser ut importerar vi, alternativt skapar från din skiss, digitala CAD-ritningar som konverteras till NC-kod för styrning av skärmaskinerna.</p>
 
-        <div class="iframe-main">
-            <iframe title="Ekshärads Water Jet AB"allowfullscreen allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" sandbox="allow-scripts allow-same-origin" src="data:text/html,<meta charset=UTF-8><style scoped>a{height:100%25;display:block;background:center/contain no-repeat black;background-image:linear-gradient(rgba(0,0,0,0.7),transparent 25%25,transparent),url(https://i.ytimg.com/vi/YqZNkb2RSqc/maxres3.jpg)}a:hover .b{fill:red;opacity:1}svg{position:absolute;left:50%25;top:50%25;width:68px;height:48px;margin-left:-34px;margin-top:-24px}a{font-family:%22YouTube Noto%22,Roboto,Arial,Helvetica,sans-serif;color:white;text-decoration:0}h1{font-size:18px;margin:0;padding:1em;font-weight:normal;text-overflow:ellipsis;white-space:nowrap;overflow:hidden}</style><a href=https://www.youtube-nocookie.com/embed/YqZNkb2RSqc?modestbranding=1&showinfo=1&rel=1&autoplay=1><h1>Ekshärads Water Jet AB</h1><svg viewBox=%220 0 68 48%22><path class=b fill=%23222 opacity=.8 d=%22M67 8c-1-3-3-6-6-6-5-2-27-2-27-2S12 0 7 2C4 2 2 5 1 8L0 24l1 16c1 3 3 6 6 6 5 2 27 2 27 2s22 0 27-2c3 0 5-3 6-6l1-16-1-16z%22/><path d=%22M45 24L27 14v20%22fill=%23fff>" width=560 height=315 frameborder=0></iframe>
-        </div>
+            <button class="lm-button learn-more">
+                <span class="circle" aria-hidden="true">
+                <span class="icon arrow"></span>
+                </span>
+                <span class="button-text">
+                    <a href="https://www.youtube.com/watch?v=YqZNkb2RSqc">
+                        Se vår film!
+                    </a>
+                </span>              
+              </button>
     </div>
 
     <div class="timeline-container">
