--- a/vatten.html
+++ b/vatten.html
@@ -154,7 +154,7 @@
                     <a href="#galleri">Bildgalleri</a>
                 </li>
                 <li>
-                    <a href="#">Kontakt</a>
+                    <a href="kontakt.html">Kontakt</a>
                 </li>
             </ul>
         </div>
