--- a/foretaget.html
+++ b/foretaget.html
@@ -173,7 +173,7 @@
 
         <div class="timeline-object">
             <div class="text">
-                <p><b>EWJ</b> startar upp i Hagfors, Värmland.</p>
+                <p><b>Ekshärads Water Jet AB</b> startar upp i Hagfors, Värmland med endast en <b>Kimtech XY Small</b> till en början.</p>
             </div>
             <div class="year">
                 <p>2000</p>
@@ -183,27 +183,47 @@
 
         <div class="timeline-object">
             <div class="text">
-                <p>Tidslinjeobjekt.</p>
+                <p><b>Kimtech XY Large</b> köps in och ökar skärkapaciteten oerhört mycket med tre gånger så stort skärbord och dubbla munstycken.</p>
             </div>
             <div class="year">
-                <p>2008</p>
+                <p>2001</p>
                 <div class="spacer"></div>
             </div>    
         </div>
 
         <div class="timeline-object">
             <div class="text">
-                <p>Tidslinjeobjekt.</p>
+                <p>Vattenskärparken får yttligare en tillökning med <b>Kimtech XY Medium</b>.</p>
             </div>
             <div class="year">
-                <p>2010</p>
+                <p>2005</p>
                 <div class="spacer"></div>
             </div> 
         </div>
 
         <div class="timeline-object">
             <div class="text">
-                <p>Tidslinjeobjekt.</p>
+                <p>Ännu ett steg framåt för att bli en heltäckande lösning för sina kunder när företagets första laserskärmaskin - <b>Prima Platino CP400</b> - köps in.</p>
+            </div>
+            <div class="year">
+                <p>2010</p>
+                <div class="spacer"></div>
+            </div>
+        </div>
+
+        <div class="timeline-object">
+            <div class="text">
+                <p>För att kunna erbjuda kunder mer än bara skärning köps <b>Baykal Kantpress</b> för att kunna bocka och med det framställa flera färdiga produkter.</p>
+            </div>
+            <div class="year">
+                <p>2011</p>
+                <div class="spacer"></div>
+            </div>
+        </div>
+
+        <div class="timeline-object">
+            <div class="text">
+                <p><b>EWJ</b> utökar verksamheten med att införskaffa <b>Baykal HYPERTHERM 260XD</b> kombomaskin med gas och plasma för att kunna ta fram kostnadseffektiva grova ämnen.</p>
             </div>
             <div class="year">
                 <p>2012</p>
@@ -213,20 +233,10 @@
 
         <div class="timeline-object">
             <div class="text">
-                <p>Tidslinjeobjekt.</p>
+                <p>För att även kunna tillverka rör och konor så införskaffas en rullbock, en <b>Sahinler 4R HS 30-260</b>.</p>
             </div>
             <div class="year">
-                <p>2013</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>Tidslinjeobjekt.</p>
-            </div>
-            <div class="year">
-                <p>2016</p>
+                <p>2015</p>
                 <div class="spacer"></div>
             </div>
         </div>
@@ -370,6 +380,7 @@
                     </li>
                 </ul>
             </div>
+
         </div>
         <div class="copyright">
             <div class="xf5">© Ekshärads Water Jet AB</div>
