--- a/index.html
+++ b/index.html
@@ -210,11 +210,23 @@
             </div>
             <div class="percs-ft">
                 <p class="hS">Ekshärads Water Jet</p>
+                <h1>Ledanade inom legotillverkning i Värmland</h1>
                 <p>Vi på <b>EWJ</b> jobbar för att sätta våra kunder i fokus med huvudmål att få fram rätt detaljer för rätt pris i bäst lämpliga material</p>
                 <p>Ekshärads Water Jet har varit aktiva inom branschen i över 20 år. Med många år på nacken är vi en leverantör ni kan lita på för era projekt.</p>
-                <a href="foretaget.html" area-label="Läs mer om EWJ">
+
+                <button class="lm-button learn-more">
+                    <span class="circle" aria-hidden="true">
+                    <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">
+                        <a href="foretaget.html" area-label="Läs mer om EWJ">
+                            Läs mer
+                        </a>
+                    </span>              
+                  </button>
+                <!--<a href="foretaget.html" area-label="Läs mer om EWJ">
                     <button class="read-more-ewj">Läs mer om oss</button>
-                </a>
+                </a>-->
             </div>
         </div>
 
@@ -253,7 +265,7 @@
                     <p class="line-fix">Vid specialprojekt är det bara att ta kontakt med oss så försöker vi gemensamt hitta en lösning.</p>
             <br>
                     <p class="line-fix">Vi konverterar även skisser och ritningar till 2D respektive 3D som senare används för att styra våra maskiner.</p>
-                    <div class="card-main-sub">
+                    <!-- <div class="card-main-sub">
                         <div>
                             <p>Våra program.</p>
                             <ul>
@@ -303,7 +315,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
             </div>
         </div>
     </section>
@@ -367,6 +379,8 @@
                     </li>
                 </ul>
             </div>
+
+
         </div>
         <div class="copyright">
             <div class="xf5">© Ekshärads Water Jet AB</div>
