a lot of changes

--- a/foretaget.html
+++ b/foretaget.html
@@ -152,7 +152,7 @@
             <p>Tack vare ett välfyllt lager, med de flesta förekommande dimensionerna av plåt, kan vi hålla mycket snabba leveranstider. Vi på Ekshärads Water Jet är flexibla, vi vill ge våra kunder det de söker. Det spelar ingen roll hur komplicerad detaljen är - vi anpassar oss.</p>
             <p>Våra moderna, NC-styrda skärmaskiner klarar det mesta, komplexa figurer med snäva toleranser, runda, ovala, fyrkantiga hål i tunna och grova dimensioner, alltid med högt materialutnyttjande. Beroende på hur dina underlag ser ut importerar vi, alternativt skapar från din skiss, digitala CAD-ritningar som konverteras till NC-kod för styrning av skärmaskinerna.</p>
 
-            <button class="lm-button learn-more">
+            <button class="lm-button learn-more" style="width:15rem;">
                 <span class="circle" aria-hidden="true">
                 <span class="icon arrow"></span>
                 </span>
