--- a/tillagg.html
+++ b/tillagg.html
@@ -156,11 +156,11 @@
                 <li>
                     <a href="#process-annat">Annat</a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="#">Bildgalleri</a>
-                </li>
+                </li>-->
                 <li>
-                    <a href="#">Kontakt</a>
+                    <a href="kontakt.html">Kontakt</a>
                 </li>
             </ul>
         </div>
