--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <p>Vi på <b>EWJ</b> jobbar för att sätta våra kunder i fokus med huvudmål att få fram rätt detaljer för rätt pris i bäst lämpliga material</p>
                 <p>Ekshärads Water Jet har varit aktiva inom branschen i över 20 år. Med många år på nacken är vi en leverantör ni kan lita på för era projekt.</p>
 
-                <button class="lm-button learn-more">
+                <button class="lm-button learn-more" style="width:13rem;">
                     <span class="circle" aria-hidden="true">
                     <span class="icon arrow"></span>
                     </span>
@@ -227,6 +227,34 @@
                 <!--<a href="foretaget.html" area-label="Läs mer om EWJ">
                     <button class="read-more-ewj">Läs mer om oss</button>
                 </a>-->
+            </div>
+        </div>
+
+        <div class="ext-container">
+            <div class="ext-ft">
+                <p class="hS">Mångsidig</p>
+                <h1>En helhetslösning för era produkter</h1>
+                <p>Med många möjligheter och viljekraft att ge våra kunder den bästa möjliga servicen drivs vi av att kunna erbjuda en så komplett produkt som möjligt.</p>
+                <p>Det är därför vi strävar efter att vara en helhetslösning för våra kunder. Från inköp av material till skärning, bockning, setsning, gängning och lackering med mera.</p>
+
+                <button class="lm-button learn-more">
+                    <span class="circle" aria-hidden="true">
+                    <span class="icon arrow fix"></span>
+                    </span>
+                    <span class="button-text">
+                        <a href="tillagg.html" style="margin-left:4rem;" area-label="Läs mer om EWJ">
+                            Vad vi erbjuder
+                        </a>
+                    </span>              
+                  </button>
+                <!--<a href="foretaget.html" area-label="Läs mer om EWJ">
+                    <button class="read-more-ewj">Läs mer om oss</button>
+                </a>-->
+            </div>
+            <div class="ext-content">
+                <p>Snabba</p>
+                <p>Pålitliga</p>
+                <p>Kostnadseffektiva</p> 
             </div>
         </div>
 
