lots of changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -210,7 +211,7 @@
             </div>
             <div class="percs-ft">
                 <p class="hS">Ekshärads Water Jet</p>
-                <h1>Ledanade inom legotillverkning i Värmland</h1>
+                <h1>Ledande inom legotillverkning i Värmland</h1>
                 <p>Vi på <b>EWJ</b> jobbar för att sätta våra kunder i fokus med huvudmål att få fram rätt detaljer för rätt pris i bäst lämpliga material</p>
                 <p>Ekshärads Water Jet har varit aktiva inom branschen i över 20 år. Med många år på nacken är vi en leverantör ni kan lita på för era projekt.</p>
 
@@ -234,27 +235,22 @@
             <div class="ext-ft">
                 <p class="hS">Mångsidig</p>
                 <h1>En helhetslösning för era produkter</h1>
-                <p>Med många möjligheter och viljekraft att ge våra kunder den bästa möjliga servicen drivs vi av att kunna erbjuda en så komplett produkt som möjligt.</p>
-                <p>Det är därför vi strävar efter att vara en helhetslösning för våra kunder. Från inköp av material till skärning, bockning, setsning, gängning och lackering med mera.</p>
+                <p>Med många möjligheter och viljekraft att ge våra kunder den bästa möjliga service drivs vi av att kunna erbjuda en så komplett produkt som möjligt.</p>
+                <p>Det är därför vi strävar efter att vara en helhetslösning för våra kunder. Från inköp av material till skärning, bockning, svetsning, gängning och lackering med mera.</p>
 
                 <button class="lm-button learn-more">
                     <span class="circle" aria-hidden="true">
                     <span class="icon arrow fix"></span>
                     </span>
                     <span class="button-text">
-                        <a href="tillagg.html" style="margin-left:4rem;" area-label="Läs mer om EWJ">
+                        <a href="tillagg.html" style="margin-left:4rem;" area-label="Vad EWJ erbjuder">
                             Vad vi erbjuder
                         </a>
                     </span>              
                   </button>
-                <!--<a href="foretaget.html" area-label="Läs mer om EWJ">
-                    <button class="read-more-ewj">Läs mer om oss</button>
-                </a>-->
             </div>
             <div class="ext-content">
-                <p>Snabba</p>
-                <p>Pålitliga</p>
-                <p>Kostnadseffektiva</p> 
+                <model-viewer src="img/3d model/flange-3d.glb" tone-mapping="neutral" shadow-intensity="0" exposure=".8" shadow-softness="1.1" auto-rotate camera-orbit="45deg 80deg"> </model-viewer>
             </div>
         </div>
 
