--- a/kontakt.html
+++ b/kontakt.html
@@ -160,20 +160,20 @@
             <br>
             <h2>Hoppas vi hörs!</h2>
             <br>
-            <hr>
-            <br>
-            <h3>Att tänka på inför offertförfrågningar;</h3>
-            <ul>
-                <li>Offertförfrågningar sker enklast via mail men kan även tas muntligt på plats eller över telefon.</li>
-                <br>
-                <li>Skicka med filer så som .DXF, .STEP, .SLDPRT, .X_T, .DWG etc för att få svar snabbare.</li>
-                <br>
-                <li>Vi kan hantera hela 3D-sammanställningar.</li>
-                <br>
-                <li>Vi hanterar och konverterar skisser och pappersritningar.</li>
-                <br>
-                <li>Det kan ta upp mot en vecka för att få svar, beroende på bl.a underlag och komplexitet.</li>
-            </ul>
+            <div class="contact-prereq">
+                <h3>Att tänka på inför offertförfrågningar;</h3>
+                <ul>
+                    <li>Offertförfrågningar sker enklast via mail men kan även tas muntligt på plats eller över telefon.</li>
+                    <br>
+                    <li>Skicka med filer så som .DXF, .STEP, .SLDPRT, .X_T, .DWG etc för att få svar snabbare.</li>
+                    <br>
+                    <li>Vi kan hantera hela 3D-sammanställningar.</li>
+                    <br>
+                    <li>Vi hanterar och konverterar skisser och pappersritningar.</li>
+                    <br>
+                    <li>Det kan ta upp mot en vecka för att få svar, beroende på bl.a underlag och komplexitet.</li>
+                </ul>
+            </div>
         </div>
 
         <div class="map-container">
@@ -244,7 +244,7 @@
                     </li>
                 </ul>
             </div>
-            
+
         </div>
         <div class="copyright">
             <div class="xf5">© Ekshärads Water Jet AB</div>
