--- a/vatten.html
+++ b/vatten.html
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Bearbetning</a>
+                        <a id="de">Tjänster</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -79,7 +79,19 @@
                                 </li>
 
                                 <li>
-                                    <a href="tillagg.html">Tillägg</a>
+                                    <a href="tillagg.html#process-bockning">Bockning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-svetsning">Svetsning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-rullning">Rullning</a>
+                                </li>
+
+                                <li>
+                                    <a href="tillagg.html#process-annat">Annat</a>
                                 </li>
                             </ul>
                             <button class="dropdown-btn">Tillbaka</button>
@@ -318,8 +330,10 @@
                 target="_blank">
                 <img src="img/gallery/water/water1_400.jpg" alt="Vattenskurna detaljer i aluminium." loading="lazy"/>
                 <div class="pswp-caption-content">
-                    <p><b>Vattenskurna detaljer i 6082</b></p>
+                    <div class="image-caption-background">
+                        <p><b>Vattenskurna detaljer i 6082</b></p>
                     <p>Obehandlad</p>
+                    </div>
                 </div>
                 </a>
         
@@ -330,8 +344,10 @@
                 target="_blank">
                 <img src="img/gallery/water/water2_400.jpg" alt="Vattenskuren detalj i S355MC." loading="lazy"/>
                 <div class="pswp-caption-content">
-                    <p><b>Vattenskuren detalj i S355MC</b></p>
-                    <p>Obehandlad</p>
+                    <div class="image-caption-background">
+                        <p><b>Vattenskuren detalj i S355MC</b></p>
+                        <p>Obehandlad</p>
+                    </div> 
                 </div>
                 </a>
 
@@ -342,8 +358,10 @@
                 target="_blank">
                 <img src="img/gallery/water/water3_400.jpg" alt="Vattenskuren detalj i 450HB." loading="lazy"/>
                 <div class="pswp-caption-content">
-                    <p><b>Vattenskuren detalj i 450HB</b></p>
-                    <p>Lätt slipad</p>
+                    <div class="image-caption-background">
+                        <p><b>Vattenskuren detalj i 450HB</b></p>
+                        <p>Lätt slipad</p>
+                    </div>
                 </div>
                 </a>
 
@@ -354,8 +372,10 @@
                 target="_blank">
                 <img src="img/gallery/water/water4_400.jpg" alt="Kapad flaska i glas." loading="lazy"/>
                 <div class="pswp-caption-content">
-                    <p><b>Vattenskuren detalj i glas</b></p>
+                    <div class="image-caption-background">
+                        <p><b>Vattenskuren detalj i glas</b></p>
                     <p>Glasflaska kapad på mitten.</p>
+                    </div>
                 </div>
                 </a>
 
@@ -393,7 +413,7 @@
             </div>
 
             <div class="inside-footer">
-            <h3>Bearbetning</h3>
+            <h3>Skärning</h3>
             <ul>
                 <li>
                     <a href="#">Vattenskärning</a>
@@ -404,11 +424,26 @@
                 <li>
                     <a href="gas-plasma.html">Gas & Plasmaskärning</a>
                 </li>
-                <li>
-                    <a href="tillagg.html">Tillägg</a>
-                </li>
             </ul>
             </div>
+
+            <div class="inside-footer">
+                <h3>Bearbetning</h3>
+                <ul>
+                    <li>
+                        <a href="tillagg.html#process-bockning">Bockning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-svetsning">Svetsning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-rullning">Rullning</a>
+                    </li>
+                    <li>
+                        <a href="tillagg.html#process-annat">Annat</a>
+                    </li>
+                </ul>
+                </div>
 
             <div class="inside-footer">
                 <h3>Information</h3>
@@ -427,7 +462,7 @@
         </div>
         <div class="copyright">
             <div class="xf5">© Ekshärads Water Jet AB</div>
-            <div class="xf5">2022</div>
+            <div class="xf5">2025</div>
         </div>
     </footer>
 </div>
