--- a/foretaget.html
+++ b/foretaget.html
@@ -9,6 +9,7 @@
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 
     <!-- <link rel="preload" href="./photoswipe/photoswipe.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="./photoswipe/photoswipe.css"></noscript>
@@ -260,6 +261,9 @@
                 <div class="spacer"></div>
             </div>
         </div>
+    </div>
+    <div class="td-container">
+        <model-viewer src="img/3d model/const1-3d.glb" tone-mapping="neutral" shadow-intensity="1" exposure=".9" shadow-softness=".6" auto-rotate camera-orbit="45deg 80deg"> </model-viewer>
     </div>
 </section>
 
